# 199xVM

./: .dockerignore  .gitignore  .npmignore  ANALYSIS.md  Benchmark.md  CLAUDE.md  Cargo.toml  Dockerfile.rust  Makefile  README.md  build-bundle.sh  build-clj-smoke.sh  build-dist.sh  build-shim.sh  build-test-bundle.sh  compile-compact.mjs  docker-compose.yml  package-lock.json  package.json  setup-dev-jars.sh
docker/: Dockerfile.clojure  Dockerfile.java  Dockerfile.node  Dockerfile.rust
docs/: class-lifecycle-model.md
jvm-core/: Cargo.toml
jvm-core/benches/: interpreter.rs
jvm-core/src/: class_file.rs  collections.rs  heap.rs  interpreter.rs  lib.rs
jvm-core/src/interpreter/: annotations.rs  bytecode.rs  descriptors.rs  dispatch.rs  frame.rs  invoke.rs  launcher.rs  mod.rs  native_static.rs  native_virtual.rs  reflection.rs  trampoline.rs
jvm-core/tests/: class_lifecycle_test.rs  clojure_integration_test.rs  integration_test.rs
scripts/: clj-upstream-coverage.sh
test-classes/: MonitorContentionTest.java  NotifyAllTest.java  ReentrantWaitTest.java  SynchronizedNullTest.java  SynchronizedTest.java  ThreadBasicTest.java  WaitNotifyTest.java
test-sources/: AbstractMethodTest.java  AccessControllerExceptionProcessMain.java  AccessControllerShimTest.java  ArraysCopyOfTest.java  BooleanTypeTest.java  ClassForNameArrayInitTest.java  ClassLoaderNegativeTest.java  ClassLoaderTest.java  ClassMirrorIdentityTest.java  ClassResourceLookupTest.java  ClinitChainYieldProcessMain.java  ClinitErroneousStateTest.java  ClinitExceptionTest.java  ClinitYieldProcessMain.java  (+52 more)
(+322 files in other folders)
